--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,10 +1,11 @@
 .navbar {
+  display: flex;
   height: 55px;
   background-color: #46beab;
   margin-bottom: 20px;
   display: flex;
   justify-content: space-between;
-  align-items: last baseline;
+  align-items: center;
   padding-left: 20px;
   padding-right: 20px;
 }
