--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,6 +1,51 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 .container {
   width: 1200px;
   margin: 0 auto;
 }
 
+.navbar {
+  display: flex;
+  height: 55px;
+  background-color: #46beab;
+  margin-bottom: 20px;
+  align-items: center;
+  padding-left: 20px;
+  padding-right: 20px;
+}
 
+.navbar h1 {
+  flex: 2;
+}
+
+
+.landingPageLoggedIn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.landingPageLoggedOut {
+  display: flex;
+  justify-content: center;
+}
+
+.landingPageLoggedIn button {
+  height: 50px;
+  width: 100px;
+}
+
+#cashier {
+  display: flex;
+  justify-content: center;
+}
+
+button {
+  margin-left: 20px;
+  background-color: #46beab;
+  border: none;
+}
