--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -12,7 +12,7 @@
   display: flex;
   height: 55px;
   background-color: #46beab;
-  margin-bottom: 20px;
+  margin-bottom: 50px;
   align-items: center;
   padding-left: 20px;
   padding-right: 20px;
@@ -21,7 +21,6 @@
 .navbar h1 {
   flex: 2;
 }
-
 
 .landingPageLoggedIn {
   display: flex;
@@ -44,8 +43,25 @@
   justify-content: center;
 }
 
-button {
+.navbar button {
   margin-left: 20px;
   background-color: #46beab;
   border: none;
+}
+
+.signUp button {
+  margin-top: 10px;
+}
+
+label {
+  display: block;
+}
+
+input {
+  margin-bottom: 10px;
+}
+
+.signUp {
+  display: flex;
+  justify-content: space-between;
 }
