--- a/src/styles/General.css
+++ b/src/styles/General.css
@@ -82,5 +82,81 @@ body {
   background-color: #f3a800;
   color: #fff;
   font-weight: 500;
+  font-weight: bold;
   font-size: 1.8rem;
+  cursor: pointer;
+  transition: all 0.3s;
+  align-self: flex-end;
+  justify-self: flex-start;
+  flex-shrink: 0;
+}
+
+.btn:hover {
+  background-color: #db9700;
+  /* Trick to add border inside */
+  /* box-shadow: inset 0 0 0 3px #fff; */
+}
+
+.btn--outline {
+  background-color: #fbe5b3;
+  color: #333;
+}
+
+.btn--outline:hover {
+  background-color: #fbe5b3;
+
+  /* Trick to add border inside */
+  box-shadow: inset 0 0 0 3px #fff;
+}
+
+.input {
+  padding-left: 1rem;
+  height: 4.6rem;
+  width: 16.9rem;
+  font-size: 1.4rem;
+  text-align: left;
+  margin-right: 3.2rem;
+  background-color: #fefaf0;
+  border: 1px solid #cccccc;
+  /* border: none; */
+  border-radius: 9px;
+  /* color: #fff; */
+}
+
+.input:focus {
+  outline: none;
+}
+
+.select {
+  padding-left: 1rem;
+  height: 4.6rem;
+  width: 16.9rem;
+  margin-right: 3.2rem;
+  background-color: #fefaf0;
+  border: 1px solid #cccccc;
+  border-radius: 9px;
+}
+
+.grid {
+  display: grid;
+  column-gap: 6.4rem;
+  row-gap: 9.6rem;
+}
+
+.grid--2-cols {
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.heading-primary,
+.headint-secondary,
+.heading-tertiary {
+  color: #333;
+  font-weight: 700;
+  /* letter-spacing: -0,5px; */
+}
+
+.heading-primary {
+  font-size: 5.2rem;
+  line-height: 1.05;
+  margin-bottom: 3.2rem;
 }
