--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -56,7 +56,9 @@ div.cardholder-container.input-container.empty.touched {
 
 .section-cashier {
   background-color: #fbe5b3;
-  padding: 4.8rem 0 9.6rem 0;
+
+  /* padding-right should be 9.6rem but as the CC method are to high 13rem is needed atm */
+  padding: 4.8rem 0 13rem 0;
 
   /* Height to prevent cashier going outside of section */
   /* height: 850px; */
