--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,347 +1,247 @@
+@import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap");
+
+/* - Font sizes (px)
+10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98 */
+
 * {
-  /* width: 1200px; */
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
+
+html {
+  /*
+  To set font-size to 10px and respect  the user browser fontsize settings
+  10px / 16px = 0.625 which is equal to 62.5%
+  */
+  font-size: 62.5%;
+}
+
+body {
+  font-family: "Rubik", sans-serif;
+}
+
+/* --------------------------------
+GENERAL REUSABLE STYLING
+-------------------------------- */
 
 .container {
+  /* Convention standard: 120rem/1200px 
+  Or: 1140 might be even more standard.
+  */
+  max-width: 120rem;
+  margin: 0 auto;
+  padding: 0 3.2rem;
+}
+
+.grid {
+  display: grid;
+  row-gap: 7rem;
+  column-gap: 7rem;
+}
+
+.grid--2-cols {
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.grid--3-cols {
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.grid--4-cols {
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.grid--5-cols {
+  grid-template-columns: repeat(5, 1fr);
+}
+
+.heading-primary,
+.heading-secondary,
+.heading-tertiary {
+  letter-spacing: -0.5px;
+  font-weight: 700;
+  color: #333;
+}
+
+.heading-primary {
+  font-size: 5.2rem;
+  line-height: 1.05;
+  margin-bottom: 3.2rem;
+}
+
+.heading-secondary {
+  font-size: 4.4rem;
+  line-height: 1.2;
+  margin-bottom: 9.6rem;
+}
+
+.heading-tertiary {
+  font-size: 3rem;
+  line-height: 1.2;
+  margin-bottom: 3.2rem;
+}
+
+.btn,
+.btn:link,
+.btn:visited {
+  display: inline-block;
+  font-size: 2rem;
+  font-weight: 600;
+  text-decoration: none;
+  padding: 1.4rem 3.2rem;
+  border-radius: 9px;
+  transition: background-color 300ms;
+
+  /* ONly necessary for .btn */
+  border: none;
+  cursor: pointer;
+  font-family: inherit;
+}
+
+.btn:hover,
+.btn:active {
+  background-color: #999;
+  color: white;
+}
+
+/* --------------------------------
+Nav
+-------------------------------- */
+
+.header {
+  display: flex;
+  justify-content: end;
+  align-items: center;
+
+  /* Because we want it to be sticky later */
+  height: 9.6rem;
+  padding: 0 4.8rem;
+}
+
+.user-userId {
+  display: block;
+  font-size: 1.6rem;
+  font-weight: 500;
+}
+
+.main-nav-list {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  gap: 3.2rem;
+}
+
+.main-nav-link {
+  display: inline-block;
+  text-decoration: none;
+  color: #333;
+  font-weight: 500;
+  font-size: 1.8rem;
+  transition: all 0.3s;
+}
+
+.main-nav-link:active,
+.main-nav-link:hover {
+  cursor: pointer;
+}
+
+/* --------------------------------
+Dashboard
+-------------------------------- */
+
+.dashboard {
+  padding: 4.8rem 0rem 9.6rem 0rem;
+}
+
+/* --------------------------------
+Landingpage
+-------------------------------- */
+
+.landingpage h2 {
+  text-align: center;
+}
+
+/* --------------------------------
+Response 
+-------------------------------- */
+
+.section-response {
   display: flex;
   flex-direction: column;
+  gap: 5.2rem;
+}
+
+.response {
+  padding: 3.2rem;
+  border-radius: 11px;
+  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
+}
+
+.response-form {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  column-gap: 3.2rem;
+  row-gap: 2.4rem;
+  font-family: inherit;
+}
+
+label {
+  display: block;
+  font-size: 1.6rem;
+  /* font-weight: 500; */
+  /* margin-bottom: 1.2rem; */
+}
+
+input,
+select {
   width: 100%;
-  font-family: sans-serif;
-  margin: 0 auto;
+  padding: 1.2rem 1rem 1.2rem 1rem;
+  font-size: 1.4rem;
+  border: none;
+  border-radius: 9px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  /* color: inherit; */
 }
 
-.navbar {
-  display: flex;
-  justify-content: space-between;
-  height: 55px;
-  background-color: #46beab;
-  align-items: center;
-  padding-left: 20px;
-  padding-right: 20px;
-
-  position: sticky;
-  top: 0;
-  left: 0;
-  width: 100%;
-  align-items: center;
-  padding-left: 20px;
-  padding-right: 20px;
-  z-index: 1000;
+.btn--form {
+  align-self: flex-end;
+  padding: 1.2rem;
 }
 
-.navbarRoutes {
-  display: flex;
-  justify-content: space-between;
-  width: 10%;
-  text-decoration: underline;
-}
-
-.navbarRoutes button {
-  font-size:16px;
-}
-
-.cashierLink:hover {
-  color: white;
-  text-decoration: underline;
-}
-
-.boLink:hover {
-  color: white;
-  text-decoration: underline;
-}
-
-.signUp {
-  background-color: red;
-  padding-right: 40px;
-}
-
-.signUp:hover {
-  color: white;
-  text-decoration: underline;
-}
-
-.signIn:hover {
-  color: white;
-  text-decoration: underline;
-}
-
-.signOut {
-  display: flex;
-  flex-direction: row;
-  justify-items: start;
-  padding-right: 40px;
-}
-
-.signOut button:hover {
-  color: white;
-  text-decoration: underline;
-}
-
-.navbar h2 {
-  cursor: pointer;
-}
-
-.navbar button {
-  cursor: pointer;
-}
-
-.navbar p span:before {
-  content: '€';
-}
-
-.signOutlogged {
-  display: flex;
-  flex-direction: row;
-}
+/* --------------------------------
+Sign up
+-------------------------------- */
 
 .signup {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 70px;
+  margin-top: 7rem;
   /* justify-content: center; */
 }
 
-.signupHeader h1 {
-  margin-bottom: 20px;
+.signup-form {
+  display: flex;
+  flex-direction: column;
+  font-family: inherit;
+  gap: 3rem;
 }
+
+/* --------------------------------
+Log in
+-------------------------------- */
 
 .login {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 70px;
-  /* justify-content: center; */
+  margin-top: 7rem;
 }
 
-.loginHeader h1 {
-  margin-bottom: 20px;
-}
-
-.landingPageLoggedIn {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 30px;
-  padding-top: 20px;
-}
-
-.landingPageLoggedOut {
-  display: flex;
-  justify-content: center;
-  padding-top: 20px;
-}
-
-.landingPageLoggedIn button {
-  height: 50px;
-  width: 100px;
-}
-
-#cashier {
-  display: flex;
-  justify-content: center;
-  margin-top: 20px;
-}
-
-.cashierContainer {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-.txLog {
-  height: 1000px;
-  width: 100%;
-  border-right: 1px solid #eee;
-  padding: 20px;
-}
-
-.navbar button {
-  margin-left: 20px;
-  background-color: #46beab;
-  border: none;
-}
-
-.signUp button {
-  margin-top: 10px;
-}
-
-label {
-  display: block;
-}
-
-/* input {
-  margin-bottom: 2%;
-  margin-top: 2px;
-} */
-
-.signUp {
-  display: flex;
-  justify-content: space-between;
-}
-
-.backoffice {
-  display: flex;
-  gap: 10px;
-  align-items: center;
-  flex-direction: column;
-  margin-top: 70px;
-}
-
-div.userButton {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  width: 50%;
-}
-
-.buttonName {
-  display: flex;
-  justify-content: flex-start
-}
-
-.buttonName p {
-  font-size: 16px;
-  font-weight: bold;
-  margin-right: 10px;
-}
-
-div.content.active {
+.login-form {
   display: flex;
   flex-direction: column;
-  width: 50%;
-  align-items: left;
-}
-
-div.content.active input {
-  width: 40%;
-  border-radius: 5px;
-  padding: 5px 5px;
-  margin-top: 2px;
-}
-
-button.collapsible {
-  background-color: #a7eee2;
-  cursor: pointer;
-  padding: 10px;
-  width: 50%;
-  border: none;
-  border-radius: 5px;
-  text-align: left;
-  font-size: 15px;
-}
-
-.collapsible.active,
-.collapsible:hover {
-  background-color: #46beab;
-}
-
-.content {
-  display: none;
-  text-align: left;
-  margin-top: 3px;
-  width: 100%;
-}
-
-div.content.active {
-  display: flex;
-  width: 40%;
-  background-color: white;
-}
-
-.active {
-  display: block;
-}
-
-.bo-input {
-  display: flex;
-  font-size: 17px;
-  flex-direction: column;
-  justify-items: center;
-  width: 100%;
-  padding: 10px;
-}
-
-/* Slider switch */
-
-
-/* The switch - the box around the slider */
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 60px;
-  height: 34px;
-  margin-top: 10px;
-}
-
-/* Hide default HTML checkbox */
-.switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
-
-/* The slider */
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: red;
-  -webkit-transition: .4s;
-  transition: .4s;
-}
-
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 26px;
-  width: 26px;
-  left: 4px;
-  bottom: 4px;
-  background-color: white;
-  -webkit-transition: .4s;
-  transition: .4s;
-}
-
-input:checked+.slider {
-  background-color: #46beab;
-}
-
-input:focus+.slider {
-  box-shadow: 0 0 1px #2196F3;
-}
-
-input:checked+.slider:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
-  transform: translateX(26px);
-}
-
-/* Rounded sliders */
-.slider.round {
-  border-radius: 34px;
-}
-
-.slider.round:before {
-  border-radius: 50%;
-}
-
-.save-button {
-  background-color: #a7eee2;
-  padding: 10px 20px;
-  font-size: 16px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-  width: 50%;
-}
-
-.save-button:hover {
-  background-color: #46beab;
+  font-family: inherit;
+  gap: 3rem;
 }
